crates/kdl-config-derive/tests/ui/append_on_scalar.stderr
error: append conflict policy is only valid for Vec<T> fields
 --> tests/ui/append_on_scalar.rs:5:6
  |
5 |     #[kdl(attr, conflict = "append")]
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
