crates/kdl-config-derive/tests/ui/append_on_scalar.rs
use kdl_config_derive::KdlNode;

#[derive(KdlNode)]
struct Test {
    #[kdl(attr, conflict = "append")]
    value: i64,
}

fn main() {}
